# Deal/src/main/java/ru/zentsova/deal/model/ChangeType.java
@@ -1,6 +1,0 @@
-package ru.zentsova.deal.model;
-
-public enum ChangeType {
-    AUTOMATIC,
-    MANUAL
-}
